--- a/requirements.txt
+++ b/requirements.txt
@@ -52,3 +52,9 @@ typing-inspection==0.4.2
 typing_extensions==4.15.0
 urllib3==2.5.0
 zstandard==0.25.0
+
+# Linting and Code Quality Tools
+black==24.10.0
+flake8==7.1.1
+isort==5.13.2
+mypy==1.13.0
