--- a/.env.example
+++ b/.env.example
@@ -1,3 +1,7 @@
 GOOGLE_API_KEY=
 
 OPENAI_API_KEY=
+
+OPENAI_MODEL=text-embedding-3-small
+PGVECTOR_URL=postgresql+psycopg://postgres:postgres@host.docker.internal:5432/rag
+PGVECTOR_COLLECTION=gpt5_collection
